# Obsidian-Note-Semantic-Search

./: README.md  config.example.json  pyproject.toml
note_search/: __init__.py  chunker.py  cli.py  embedder.py  indexer.py  search.py  storage.py
note_search.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
